chore: add clusterissuer healthcheck

--- a/kubernetes/apps/main/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/apps/main/cert-manager/cert-manager/ks.yaml
@@ -13,6 +13,9 @@ spec:
       kind: HelmRelease
       name: *app
       namespace: &namespace cert-manager
+    - apiVersion: cert-manager.io/v1
+      kind: ClusterIssuer
+      name: letsencrypt-production
   healthCheckExprs:
     - apiVersion: cert-manager.io/v1
       kind: ClusterIssuer
