chore: monitor envoy

--- a/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
+++ b/kubernetes/apps/base/kube-system/cilium/app/helm/values.yaml
@@ -28,6 +28,9 @@ endpointRoutes:
   enabled: true
 envoy:
   rollOutPods: true
+  prometheus:
+     serviceMonitor:
+       enabled: true
 gatewayAPI:
   enabled: true
   enableAlpn: true
