feat: migrate spotty to ghcr

--- a/kubernetes/apps/base/media/your-spotify/helmrelease.yaml
+++ b/kubernetes/apps/base/media/your-spotify/helmrelease.yaml
@@ -24,7 +24,7 @@ spec:
         containers:
           app:
             image:
-              repository: yooooomi/your_spotify_server
+              repository: ghcr.io/yooooomi/your_spotify_server
               tag: 1.13.0@sha256:5024b3d369788c12cb0a0f1ba2cb636ed64950202b4d1a364bd4a0a4c841eb66
             env:
               TIMEZONE: America/Edmonton
@@ -55,7 +55,7 @@ spec:
         containers:
           app:
             image:
-              repository: yooooomi/your_spotify_client
+              repository: ghcr.io/yooooomi/your_spotify_client
               tag: 1.13.0@sha256:1da7816f1c45a917f0b5ccc5fc8f04fe3c9d874352ba3206f4ea6bb0891930a7
             env:
               API_ENDPOINT: *api_endpoint
