--- a/kubernetes/apps/base/media/your-spotify/helmrelease.yaml
+++ b/kubernetes/apps/base/media/your-spotify/helmrelease.yaml
@@ -55,7 +55,7 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/yooooomi/your_spotify_client
+              repository: yooooomi/your_spotify_client ##TODO migrate to ghcr once it pushes
               tag: 1.13.0@sha256:1da7816f1c45a917f0b5ccc5fc8f04fe3c9d874352ba3206f4ea6bb0891930a7
             env:
               API_ENDPOINT: *api_endpoint
