feat: change https port

--- a/kubernetes/apps/base/self-hosted/meshcentral/configmap.yaml
+++ b/kubernetes/apps/base/self-hosted/meshcentral/configmap.yaml
@@ -7,7 +7,9 @@ data:
   config.json: |
     {
       "settings": {
-        "port": 8080
+        "port": 8080,
+        "redirPort": 0,
+        "TlsOffload": true
       },
       "domains": {
         "": {
