--- a/kubernetes/apps/base/self-hosted/meshcentral/configmap.yaml
+++ b/kubernetes/apps/base/self-hosted/meshcentral/configmap.yaml
@@ -7,7 +7,8 @@ data:
   config.json: |
     {
       "settings": {
-        "port": 8080
+        "port": 80,
+        "redirPort": 0
       },
       "domains": {
         "": {
