chore: migrate to ghcr

--- a/kubernetes/apps/base/media/your-spotify/helmrelease.yaml
+++ b/kubernetes/apps/base/media/your-spotify/helmrelease.yaml
@@ -25,7 +25,7 @@ spec:
           app:
             image:
               repository: ghcr.io/yooooomi/your_spotify_server
-              tag: 1.13.0@sha256:5024b3d369788c12cb0a0f1ba2cb636ed64950202b4d1a364bd4a0a4c841eb66
+              tag: 1.13.1@sha256:552f1577b38fdd2d9e1a52a5f945c5471f57feaed9684c7b88abc9640c4a2fac
             env:
               TIMEZONE: America/Edmonton
               # Caveat if it includes Spotify in name: https://github.com/Yooooomi/your_spotify/pull/254
@@ -55,8 +55,8 @@ spec:
         containers:
           app:
             image:
-              repository: yooooomi/your_spotify_client ##TODO migrate to ghcr once it pushes
-              tag: 1.13.0@sha256:1da7816f1c45a917f0b5ccc5fc8f04fe3c9d874352ba3206f4ea6bb0891930a7
+              repository: ghcr.io/yooooomi/your_spotify_client ##TODO migrate to ghcr once it pushes
+              tag: 1.13.1@sha256:a9672141625f47ce34aa837ddab15d436bc6b3a72cff001a906fe79b078403e5
             env:
               API_ENDPOINT: *api_endpoint
             probes: *probes
