feat: inital commit

--- a/talos/main/patches/controller/machine-features.yaml
+++ b/talos/main/patches/controller/machine-features.yaml
@@ -6,8 +6,5 @@ machine:
       forwardKubeDNSToHost: false
     kubernetesTalosAPIAccess:
       enabled: true
-      allowedRoles:
-        - os:admin
-      allowedKubernetesNamespaces:
-        - actions-runner-system
-        - kube-tools
+      allowedRoles: ["os:admin"]
+      allowedKubernetesNamespaces: ["actions-runner-system", "kube-tools"]
