--- a/talos/main/patches/global/machine-install.yaml
+++ b/talos/main/patches/global/machine-install.yaml
@@ -4,6 +4,8 @@ machine:
       - apparmor=0              # Less security, faster puter
       - init_on_alloc=0         # Less security, faster puter
       - init_on_free=0          # Less security, faster puter
+      - intel_iommu=on          # PCI Passthrough
+      - iommu=pt                # PCI Passthrough
       - mitigations=off         # Less security, faster puter
       - security=none           # Less security, faster puter
       - talos.auditd.disabled=1 # Less security, faster puter
