--- a/talos/main/patches/controller/cluster.yaml
+++ b/talos/main/patches/controller/cluster.yaml
@@ -10,18 +10,17 @@ cluster:
       bind-address: 0.0.0.0
   coreDNS:
     disabled: true
-  # discovery:
-  #   enabled: true
-  #   registries:
-  #     kubernetes:
-  #       disabled: false
-  #     service:
-  #       disabled: true
+  discovery:
+    enabled: true
+    registries:
+      kubernetes:
+        disabled: true
+      service:
+        disabled: false
   etcd:
+    advertisedSubnets: ["10.69.1.0/24"]
     extraArgs:
       listen-metrics-urls: http://0.0.0.0:2381
-    advertisedSubnets:
-      - 10.69.1.0/24
   proxy:
     disabled: true
   scheduler:
