--- a/talos/main/talconfig.yaml
+++ b/talos/main/talconfig.yaml
@@ -31,14 +31,18 @@ nodes:
     controlPlane: true
     networkInterfaces:
       - # 2.5G Bond
-        interface: bond0
-        bond:
-          mode: 802.3ad
-          deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
-          xmitHashPolicy: layer3+4
-          lacpRate: fast
-          miimon: 1000
-        dhcp: true
+        # interface: bond0
+        # bond:
+        #   mode: 802.3ad
+        #   deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
+        #   xmitHashPolicy: layer3+4
+        #   lacpRate: fast
+        #   miimon: 1000
+        deviceSelector:
+          hardwareAddr: 58:47:ca:7d:3c:88
+        dhcp: false
+        addresses:
+          - "10.69.1.21/24"
         mtu: 9000
         vip:
           ip: "10.69.1.20"
@@ -67,14 +71,18 @@ nodes:
     controlPlane: true
     networkInterfaces:
       - # 2.5G Bond
-        interface: bond0
-        bond:
-          mode: 802.3ad
-          deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
-          xmitHashPolicy: layer3+4
-          lacpRate: fast
-          miimon: 1000
-        dhcp: true
+        # interface: bond0
+        # bond:
+        #   mode: 802.3ad
+        #   deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
+        #   xmitHashPolicy: layer3+4
+        #   lacpRate: fast
+        #   miimon: 1000
+        deviceSelector:
+          hardwareAddr: 58:47:ca:7d:3d:b0
+        dhcp: false
+        addresses:
+          - "10.69.1.22/24"
         mtu: 9000
         vip:
           ip: "10.69.1.20"
@@ -103,14 +111,18 @@ nodes:
     controlPlane: true
     networkInterfaces:
       - # 2.5G Bond
-        interface: bond0
-        bond:
-          mode: 802.3ad
-          deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
-          xmitHashPolicy: layer3+4
-          lacpRate: fast
-          miimon: 1000
-        dhcp: true
+        # interface: bond0
+        # bond:
+        #   mode: 802.3ad
+        #   deviceSelectors: [{ hardwareAddr: "58:47:ca:7d:*", driver: igc }]
+        #   xmitHashPolicy: layer3+4
+        #   lacpRate: fast
+        #   miimon: 1000
+        deviceSelector:
+          hardwareAddr: 02:f0:32:4f:02:f3
+        dhcp: false
+        addresses:
+          - "10.69.1.23/24"
         mtu: 9000
         vip:
           ip: "10.69.1.20"
