feat: update ceph

--- a/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -67,6 +67,9 @@ spec:
             enabled: true
       network:
         provider: host
+        addressRanges:
+          public: ["10.69.1.0/24"]
+          cluster: ["169.254.255.0/24"]
         connections:
           requireMsgr2: true
       storage:
