try talos 1.10.0 beta, disable SUC

--- a/kubernetes/apps/main/kube-tools/kustomization.yaml
+++ b/kubernetes/apps/main/kube-tools/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
   - ./node-feature-discovery/ks.yaml
   - ./reloader/ks.yaml
   - ./spegel/ks.yaml
-  - ./system-upgrade-controller/ks.yaml
+  # - ./system-upgrade-controller/ks.yaml
 configMapGenerator:
   - name: versions
     env: ../../base/kube-tools/system-upgrade-controller/versions.env
