--- a/talos/main/talconfig.yaml
+++ b/talos/main/talconfig.yaml
@@ -6,7 +6,7 @@ talosVersion: v1.10.0-beta.1
 kubernetesVersion: v1.32.4
 
 clusterName: &cluster main
-endpoint: https://k8s.main.internal:6443
+endpoint: https://10.69.1.20:6443
 
 clusterPodNets:
   - "10.42.0.0/16"
@@ -39,7 +39,9 @@ nodes:
           xmitHashPolicy: layer3+4
           lacpRate: fast
           miimon: 1000
-        dhcp: true
+        dhcp: false
+        addresses:
+          - "10.69.1.21/24"
         mtu: 9000
         vip:
           ip: "10.69.1.20"
@@ -76,7 +78,9 @@ nodes:
           xmitHashPolicy: layer3+4
           lacpRate: fast
           miimon: 1000
-        dhcp: true
+        dhcp: false
+        addresses:
+          - "10.69.1.22/24"
         mtu: 9000
         vip:
           ip: "10.69.1.20"
@@ -113,7 +117,9 @@ nodes:
           xmitHashPolicy: layer3+4
           lacpRate: fast
           miimon: 1000
-        dhcp: true
+        dhcp: false
+        addresses:
+          - "10.69.1.23/24"
         mtu: 9000
         vip:
           ip: "10.69.1.20"
