change my strategy

--- a/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/base/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -73,11 +73,20 @@ spec:
         connections:
           requireMsgr2: true
       storage:
-        useAllNodes: true
-        useAllDevices: true
-        deviceFilter: nvme1n1
+        useAllNodes: false
+        useAllDevices: false
         config:
           osdsPerDevice: "1"
+        nodes:
+          - name: ayaka
+            devices:
+              - name: /dev/disk/by-id/nvme-WD_BLACK_SN770_1TB_230314800604
+          - name: eula
+            devices:
+              - name: /dev/disk/by-id/nvme-WD_BLACK_SN770_1TB_23063G803424
+          - name: ganyu
+            devices:
+              - name: /dev/disk/by-id/nvme-WD_BLACK_SN770_1TB_23026Y802292
       placement:
         mgr: &placement
           nodeAffinity:
