feat: revert to dhcp

--- a/talos/utility/talconfig.yaml
+++ b/talos/utility/talconfig.yaml
@@ -32,8 +32,7 @@ nodes:
     networkInterfaces:
       - deviceSelector:
           hardwareAddr: 84:47:09:2d:52:52
-        addresses:
-          - "10.69.1.121/16"
+        dhcp: true
         mtu: 9000
         vip:
           ip: "10.69.1.120"
